# bittorrrent_client

./: .gitignore  CMakeLists.txt  README.md
src/: common.hpp  main.cpp
src/lib/: HandshakeHandler.hpp  PeerDiscovery.hpp  PeerMessageHandler.hpp  PieceDownloader.hpp  SocketManager.hpp  networking.hpp  structures.hpp  utils.hpp
src/lib/TorrentParser/: TorrentParser.hpp
src/lib/bencode/: bencode.hpp
